// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🖤 deprecated Components/Menus/MenuItem 2 Lines MenuItem With Avatar 1`] = `
.c4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  color: #FFFFFF;
  font-size: 1.25rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 28px;
  width: 64px;
  height: 64px;
  background-color: #F3F3F3;
}

.c4 > img,
.c4 > canvas {
  width: 100%;
  height: 100%;
}

.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
}

.c5 {
  padding: 0;
  margin: 0 8px 0 0;
}

.c5.RcListItemText-multiline {
  margin: 4px 8px 4px 0px;
}

.c5.RcListItemText-inset {
  padding-left: 56px;
}

.c5 .RcListItemText-primary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

.c5 .RcListItemText-secondary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

.c2 {
  min-width: unset;
  margin-right: 8px;
  font-size: 1rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 24px;
  color: #666666;
}

.c0 {
  outline: none;
  padding: 4px 16px;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  box-sizing: border-box;
}

.c0.RcMenuItem-unchecked {
  padding-right: 48px;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .sc-cSiAOC {
  display: block;
}

.c0:active {
  background-color: #066FAC;
  color: #fff;
}

.c0:active .c1 {
  color: #fff;
}

<li
  aria-disabled={false}
  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c0 MuiListItem-button"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    className="MuiListItemIcon-root c1 c2"
  >
    <div
      className="c3 "
      data-test-automation-class="avatar"
    >
      <div
        className="c4 RcAvatar-avatarContainer"
      >
        <img
          src="test-file-stub"
        />
      </div>
    </div>
  </div>
  <div
    className="MuiListItemText-root c5 MuiListItemText-multiline RcListItemText-multiline"
  >
    <span
      className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
    >
      Two-line item name
    </span>
    <p
      className="MuiTypography-root MuiListItemText-secondary RcListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
    >
      Secondary text
    </p>
  </div>
</li>
`;

exports[`Storyshots 🖤 deprecated Components/Menus/MenuItem Checked MenuItem 1`] = `
Array [
  <br />,
  <br />,
  .c1 {
  padding: 0;
  margin: 0 8px 0 0;
}

.c1.RcListItemText-multiline {
  margin: 4px 8px 4px 0px;
}

.c1.RcListItemText-inset {
  padding-left: 56px;
}

.c1 .RcListItemText-primary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

.c1 .RcListItemText-secondary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

.c0 {
  outline: none;
  padding: 4px 16px;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  box-sizing: border-box;
}

.c0.RcMenuItem-unchecked {
  padding-right: 48px;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .sc-cSiAOC {
  display: block;
}

.c0:active {
  background-color: #066FAC;
  color: #fff;
}

.c0:active .sc-lgWdIC {
  color: #fff;
}

<li
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c0 RcMenuItem-unchecked MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="menuitem"
    tabIndex={-1}
    value="test"
  >
    <div
      className="MuiListItemText-root c1"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Profile
      </span>
    </div>
  </li>,
]
`;

exports[`Storyshots 🖤 deprecated Components/Menus/MenuItem MenuItem 1`] = `
Array [
  .c0 {
  outline: none;
  padding: 4px 16px;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  box-sizing: border-box;
}

.c0.RcMenuItem-unchecked {
  padding-right: 48px;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .sc-cSiAOC {
  display: block;
}

.c0:active {
  background-color: #066FAC;
  color: #fff;
}

.c0:active .sc-lgWdIC {
  color: #fff;
}

<li
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c0 MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    Profile
  </li>,
  .c0 {
  outline: none;
  padding: 4px 16px;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  box-sizing: border-box;
}

.c0.RcMenuItem-unchecked {
  padding-right: 48px;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .sc-cSiAOC {
  display: block;
}

.c0:active {
  background-color: #066FAC;
  color: #fff;
}

.c0:active .sc-lgWdIC {
  color: #fff;
}

<li
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c0 MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    Profile
  </li>,
]
`;

exports[`Storyshots 🖤 deprecated Components/Menus/MenuItem MenuItem with subtext 1`] = `
.c1 {
  padding: 0;
  margin: 0 8px 0 0;
}

.c1.RcListItemText-multiline {
  margin: 4px 8px 4px 0px;
}

.c1.RcListItemText-inset {
  padding-left: 56px;
}

.c1 .RcListItemText-primary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

.c1 .RcListItemText-secondary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

.c0 {
  outline: none;
  padding: 4px 16px;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  box-sizing: border-box;
}

.c0.RcMenuItem-unchecked {
  padding-right: 48px;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .sc-cSiAOC {
  display: block;
}

.c0:active {
  background-color: #066FAC;
  color: #fff;
}

.c0:active .c2 {
  color: #fff;
}

<li
  aria-disabled={false}
  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c0 MuiListItem-button"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    className="MuiListItemText-root c1"
  >
    <span
      className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
    >
      Profile
    </span>
  </div>
  Subtext
</li>
`;

exports[`Storyshots 🖤 deprecated Components/Menus/MenuItem Text MenuItem With Icon 1`] = `
.c4 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
}

.c2 {
  min-width: unset;
  margin-right: 8px;
  font-size: 1rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 24px;
  color: #666666;
}

.c0 {
  outline: none;
  padding: 4px 16px;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  box-sizing: border-box;
}

.c0.RcMenuItem-unchecked {
  padding-right: 48px;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .sc-cSiAOC {
  display: block;
}

.c0:active {
  background-color: #066FAC;
  color: #fff;
}

.c0:active .c1 {
  color: #fff;
}

<li
  aria-disabled={false}
  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c0 MuiListItem-button"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    className="MuiListItemIcon-root c1 c2"
  >
    <span
      className="c3 star icon"
    >
      <svg
        className="c4"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16.885 1.726c.394.195.714.514.908.908l2.97 6.018a1 1 0 00.753.547l6.641.965a2.001 2.001 0 011.109 3.412L24.46 18.26c-.236.23-.343.561-.288.885l1.134 6.614a1.999 1.999 0 01-2.902 2.108l-5.94-3.123a1.002 1.002 0 00-.931 0l-5.94 3.123a2 2 0 01-2.902-2.109l1.134-6.614a.999.999 0 00-.288-.885l-4.806-4.684a2 2 0 011.109-3.411l6.641-.965a1 1 0 00.753-.547l2.97-6.018a2 2 0 012.679-.908z"
        />
      </svg>
      
    </span>
  </div>
  Profile
</li>
`;

exports[`Storyshots 🖤 deprecated Components/Menus/MenuItem Text MenuItem With Label 1`] = `
.c0 {
  outline: none;
  padding: 4px 16px;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  box-sizing: border-box;
}

.c0.RcMenuItem-unchecked {
  padding-right: 48px;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .sc-cSiAOC {
  display: block;
}

.c0:active {
  background-color: #066FAC;
  color: #fff;
}

.c0:active .c2 {
  color: #fff;
}

.c1 {
  font-weight: bold;
}

<li
  aria-disabled={false}
  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c0 MuiListItem-button"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <span
    className="c1"
  >
    label1:
     
  </span>
  test@ringcentral.com
</li>
`;
